fixing overflow in the portfolio section

--- a/src/stylesheets/Project.css
+++ b/src/stylesheets/Project.css
@@ -34,9 +34,9 @@ header {
   /* transform: translateX(-50%); */
   background-color:#81d9f7;
   color: #fff;
-  padding: 5px 10px;
+  padding: 2px 8px;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 10px;
   white-space: nowrap;
   opacity: 0;
   pointer-events: none;
